2012-07-01  Mark Vender  <markv743@yahoo.co.uk>

	Pixbuf: add const version of save() and friends

	* gdk/src/pixbuf.[hg|ccg]: save() and save_to_buffer() don't have any user-
	visible effects on the pixbuf being saved, thus they should be const.
	Add const versions, deprecate the non-const ones. Bug #678886.

2012-06-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	AppChooserDialog: Fix property name in constructors.

	* gtk/src/appchooserdialog.ccg: Change incorrect property name "file" to
	the correct "gfile" in constructors.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add an extra .defs entry needed for documentation.

	* gdk/src/gdk_extra_objects.defs: Add GdkOffscreenWindow.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	WidgetPath: Add some methods.

	* gtk/src/widgetpath.hg:
	Add to_string(), iter_get_siblings() and iter_list_regions().
	iter_clear_classes(), iter_clear_regions(): Add a -1 defaut value for pos.
	* tools/m4/convert_gtk.m4: Add a necessary conversion.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add some new methods.

	* gdk/src/screen.[hg|ccg]: Add get_monitor_workarea().
	* gtk/src/application.hg: Add get_window_by_id().
	* gtk/src/button.hg: Add set/get_always_show_image() and the 
	property.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add some extra .defs entries needed for documentation.

	* gdk/src/gdk_extra_objects.defs:
	* gtk/src/gtk_extra_objects.defs: Add definitions needed by
	the documentation generator.

2012-06-14  Murray Cumming  <murrayc@murrayc.com>

	Regenerate most .defs and .xml files.

	* gdk/src/gdk_docs.xml:
	* gdk/src/gdk_enums.defs:
	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_docs.xml:
	* gtk/src/gtk_enums.xml:
	* gtk/src/gtk_methods.defs: Update these with the gen_scripts.

	However, I had to remove the changes to GdkEventType because gmmproc
	generates duplicate enums for that if I use the newly generated .defs.

2012-06-14  Murray Cumming  <murrayc@murrayc.com>
