@@ -227,8 +227,10 @@ else
 gtkmm_files_used_hg = $(gtkmm_files_any_hg) $(gtkmm_files_arch_hg) $(gtkmm_files_deprecated_hg)
 endif
 
-gtkmm_files_hg  = $(gtkmm_files_any_hg) $(gtkmm_files_posix_hg) $(gtkmm_files_deprecated_hg)
-if GDK_TARGET_X11
-gtkmm_files_hg += $(gtkmm_files_x11_hg)
-endif
+gtkmm_files_hg = \
+  $(gtkmm_files_any_hg) \
+  $(gtkmm_files_posix_hg) \
+  $(gtkmm_files_x11_hg) \
+  $(gtkmm_files_deprecated_hg)
+
 gtkmm_files_ccg = $(gtkmm_files_hg:.hg=.ccg)
