@@ -22,6 +22,10 @@
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/window_p.h)
 
+//This file is used only on systems with the X11 backend.
+_INCLUDE_IN_WRAP_INIT(gdk/gdk.h)dnl // If GDK_WINDOWING_X11 is defined, it's defined here.
+_GMMPROC_WRAP_CONDITIONALLY(ifdef GDK_WINDOWING_X11)
+
 namespace Gtk
 {
 
@@ -35,7 +39,6 @@ class Plug : public Window
   _CLASS_GTKOBJECT(Plug, GtkPlug, GTK_PLUG, Gtk::Window, GtkWindow)
   _UNMANAGEABLE
   _IGNORE(gtk_plug_construct, gtk_plug_construct_for_display, _gtk_plug_add_to_socket, _gtk_plug_remove_from_socket)
-  _GTKMMPROC_WIN32_NO_WRAP
 public:
   Plug();
   
