@@ -23,6 +23,10 @@
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/container_p.h)
 
+//This file is used only on systems with the X11 backend.
+_INCLUDE_IN_WRAP_INIT(gdk/gdk.h)dnl // If GDK_WINDOWING_X11 is defined, it's defined here.
+_GMMPROC_WRAP_CONDITIONALLY(ifdef GDK_WINDOWING_X11)
+
 namespace Gtk
 {
 
@@ -80,7 +84,6 @@ class Socket : public Container
 {
   _CLASS_GTKOBJECT(Socket, GtkSocket, GTK_SOCKET, Gtk::Container, GtkContainer)
   _IGNORE(gtk_socket_steal)
-  _GTKMMPROC_WIN32_NO_WRAP
 public:
   _CTOR_DEFAULT
   
