@@ -1,3 +1,13 @@
+2012-07-02  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
+	Fix wrap_init() for Quartz (MacOS).
+
+	* gtk/src/filelist.am: Set gtkmm_files_hg to a list of all .hg files.
+	* gtk/src/plug.hg:
+	* gtk/src/socket.hg: Replace _GTKMMPROC_WIN32_NO_WRAP by _INCLUDE_IN_WRAP_INIT
+	and _GMMPROC_WRAP_CONDITIONALLY.
+	This requires the latest glibmm from git master. Bug #678883.
+
 2012-07-01  Mark Vender  <markv743@yahoo.co.uk>
 
 	Pixbuf: add const version of save() and friends
